--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Shared Element Transition</string>
+    <string name="home_screen_title">JetCoffee</string>
+    <string name="cart_screen_title">Cart</string>
+    <string name="not_connected">⚠️ You aren’t connected to the internet</string>
 </resources>
